Simplify static library renaming hack.

--- a/configure.ac
+++ b/configure.ac
@@ -402,6 +402,10 @@ AC_SUBST(LIBGNUTLS_CFLAGS)
 AC_DEFINE([GNUTLS_COMPAT_H], 1, [Make sure we don't use old features in code.])
 AC_DEFINE([GNUTLS_INTERNAL_BUILD], 1, [We allow temporarily usage of deprecated functions - until they are removed.])
 
+AC_DEFINE([fread_file], [_gnutls_fread_file], [static lib rename])
+AC_DEFINE([read_file], [_gnutls_read_file], [static lib rename])
+AC_DEFINE([read_binary_file], [_gnutls_read_binary_file], [static lib rename])
+
 dnl Crywrap dependencies
    AC_MSG_RESULT([***
 *** Checking dependencies for crywrap...
