--- a/.gitignore
+++ b/.gitignore
@@ -123,6 +123,7 @@ doc/reference/html/
 doc/reference/pdf-build.stamp
 doc/reference/pdf.stamp
 doc/reference/scan-build.stamp
+doc/reference/setup-build.stamp
 doc/reference/sgml-build.stamp
 doc/reference/sgml.stamp
 doc/reference/tmpl-build.stamp
@@ -136,6 +137,31 @@ doc/stamp-vti
 doc/version-guile.texi
 doc/version.texi
 doc/x509-api.texi
+extra/INSTALL
+extra/Makefile
+extra/Makefile.in
+extra/aclocal.m4
+extra/autom4te.cache/
+extra/build-aux/config.guess
+extra/build-aux/config.sub
+extra/build-aux/depcomp
+extra/build-aux/install-sh
+extra/build-aux/ltmain.sh
+extra/build-aux/missing
+extra/config.h
+extra/config.h.in
+extra/config.log
+extra/config.status
+extra/configure
+extra/gnutls-extra-api.texi
+extra/gnutls-extra.pc
+extra/ia-api.texi
+extra/includes/Makefile
+extra/includes/Makefile.in
+extra/libgnutls-extra.la
+extra/libgnutls-openssl.la
+extra/libtool
+extra/stamp-h1
 gl/Makefile
 gl/Makefile.in
 gl/alloca.h
@@ -147,6 +173,8 @@ gl/getopt.h
 gl/libgnu.la
 gl/math.h
 gl/netdb.h
+gl/signal.h
+gl/stdalign.h
 gl/stdio.h
 gl/stdlib.h
 gl/string.h
@@ -155,20 +183,25 @@ gl/sys/
 gl/tests/Makefile
 gl/tests/Makefile.in
 gl/tests/arg-nonnull.h
+gl/tests/arpa/
 gl/tests/c++defs.h
 gl/tests/fcntl.h
+gl/tests/glthread/.dirstamp
 gl/tests/inttypes.h
 gl/tests/inttypes.h 
 gl/tests/libtests.a
 gl/tests/sys/
+gl/tests/test-accept
 gl/tests/test-alignof
 gl/tests/test-alloca-opt
 gl/tests/test-argp
 gl/tests/test-arpa_inet
 gl/tests/test-binary-io
+gl/tests/test-bind
 gl/tests/test-byteswap
 gl/tests/test-c-ctype
 gl/tests/test-close
+gl/tests/test-connect
 gl/tests/test-dirent
 gl/tests/test-dup2
 gl/tests/test-environ
@@ -192,6 +225,7 @@ gl/tests/test-ftell3
 gl/tests/test-ftello
 gl/tests/test-ftello3
 gl/tests/test-ftello4
+gl/tests/test-ftruncate
 gl/tests/test-func
 gl/tests/test-fwrite
 gl/tests/test-getaddrinfo
@@ -199,6 +233,7 @@ gl/tests/test-getcwd-lgpl
 gl/tests/test-getdelim
 gl/tests/test-getline
 gl/tests/test-getopt
+gl/tests/test-getpeername
 gl/tests/test-gettimeofday
 gl/tests/test-hmac-md5
 gl/tests/test-ignore-value
@@ -208,9 +243,12 @@ gl/tests/test-intprops
 gl/tests/test-intprops 
 gl/tests/test-inttypes
 gl/tests/test-inttypes 
+gl/tests/test-ioctl
 gl/tests/test-isnand-nolibm
 gl/tests/test-isnanf-nolibm
 gl/tests/test-isnanl-nolibm
+gl/tests/test-listen
+gl/tests/test-lock
 gl/tests/test-lseek
 gl/tests/test-lstat
 gl/tests/test-malloc-gnu
@@ -223,19 +261,29 @@ gl/tests/test-netinet_in
 gl/tests/test-open
 gl/tests/test-pathmax
 gl/tests/test-perror
+gl/tests/test-perror2
+gl/tests/test-pipe
 gl/tests/test-printf-frexp
 gl/tests/test-printf-frexpl
 gl/tests/test-rawmemchr
 gl/tests/test-read-file
+gl/tests/test-recv
+gl/tests/test-recvfrom
 gl/tests/test-select
 gl/tests/test-select-fd
 gl/tests/test-select-stdin
+gl/tests/test-send
+gl/tests/test-sendto
 gl/tests/test-setenv
+gl/tests/test-setsockopt
+gl/tests/test-shutdown
+gl/tests/test-signal-h
 gl/tests/test-signbit
 gl/tests/test-sleep
 gl/tests/test-snprintf
 gl/tests/test-sockets
 gl/tests/test-stat
+gl/tests/test-stdalign
 gl/tests/test-stdbool
 gl/tests/test-stddef
 gl/tests/test-stdint
@@ -243,6 +291,7 @@ gl/tests/test-stdio
 gl/tests/test-stdlib
 gl/tests/test-strchrnul
 gl/tests/test-strerror
+gl/tests/test-strerror_r
 gl/tests/test-string
 gl/tests/test-strings
 gl/tests/test-strnlen
@@ -256,6 +305,8 @@ gl/tests/test-sys_time
 gl/tests/test-sys_types
 gl/tests/test-sys_uio
 gl/tests/test-sysexits
+gl/tests/test-thread_create
+gl/tests/test-thread_self
 gl/tests/test-time
 gl/tests/test-u64
 gl/tests/test-unistd
@@ -268,27 +319,6 @@ gl/tests/test-vfprintf-posix
 gl/tests/test-vprintf-posix
 gl/tests/test-vsnprintf
 gl/tests/test-wchar
-gl/tests/test-ftruncate
-gl/tests/test-ioctl
-gl/tests/test-lock
-gl/tests/test-perror2
-gl/tests/test-pipe
-gl/tests/test-recv
-gl/tests/test-send
-gl/tests/test-signal-h
-gl/tests/test-strerror_r
-gl/tests/test-thread_create
-gl/tests/test-thread_self
-gl/tests/arpa/
-gl/tests/test-accept
-gl/tests/test-bind
-gl/tests/test-getpeername
-gl/tests/test-listen
-gl/tests/test-recvfrom
-gl/tests/test-sendto
-gl/tests/test-setsockopt
-gl/tests/test-shutdown
-gl/tests/test-connect
 gl/tests/warn-on-use.h
 gl/time.h
 gl/time.h
@@ -303,6 +333,7 @@ guile/modules/Makefile.in
 guile/modules/gnutls.scm
 guile/src/Makefile
 guile/src/Makefile.in
+guile/src/guile-gnutls-v-2.la
 guile/src/libguile-gnutls-extra-v-1.la
 guile/src/libguile-gnutls-v-1.la
 guile/tests/Makefile
@@ -354,33 +385,9 @@ lib/x509/Makefile
 lib/x509/Makefile.in
 lib/x509/libgnutls_x509.la
 lib/x509/x509-api.texi
-extra/INSTALL
-extra/Makefile
-extra/Makefile.in
-extra/aclocal.m4
-extra/autom4te.cache/
-extra/build-aux/config.guess
-extra/build-aux/config.sub
-extra/build-aux/depcomp
-extra/build-aux/install-sh
-extra/build-aux/ltmain.sh
-extra/build-aux/missing
-extra/config.h
-extra/config.h.in
-extra/config.log
-extra/config.status
-extra/configure
-extra/gnutls-extra-api.texi
-extra/gnutls-extra.pc
-extra/ia-api.texi
-extra/includes/Makefile
-extra/includes/Makefile.in
-extra/libgnutls-extra.la
-extra/libgnutls-openssl.la
-extra/libtool
-extra/stamp-h1
 libtool
 m4/codeset.m4
+m4/fcntl-o.m4
 m4/gettext.m4
 m4/glibc2.m4
 m4/glibc21.m4
@@ -414,6 +421,7 @@ m4/printf-posix.m4
 m4/progtest.m4
 m4/size_max.m4
 m4/stdint_h.m4
+m4/threadlib.m4
 m4/uintmax_t.m4
 m4/visibility.m4
 m4/wchar_t.m4
@@ -554,4 +562,3 @@ tests/x509paths/
 tests/x509self
 tests/x509sign-verify
 tests/x509signself
-gl/signal.h
