Added ECDSA key generation, signing and verification tests.

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -20,7 +20,7 @@
 # Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA.
 
 SUBDIRS = . rsa-md5-collision pkcs1-padding pkcs8-decode pkcs12-decode	\
-	userid pathlen key-id sha2 safe-renegotiation dsa scripts
+	userid pathlen key-id sha2 safe-renegotiation dsa scripts ecdsa
 
 if ENABLE_OPENPGP
 SUBDIRS += openpgp-certs
