slow tests are not being run using valgrind

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -20,7 +20,8 @@
 # Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA.
 
 SUBDIRS = . rsa-md5-collision pkcs1-padding pkcs8-decode pkcs12-decode	\
-	userid pathlen key-id sha2 safe-renegotiation dsa scripts ecdsa
+	userid pathlen key-id sha2 safe-renegotiation dsa scripts ecdsa \
+	slow
 
 if ENABLE_OPENPGP
 SUBDIRS += openpgp-certs
@@ -64,8 +65,7 @@ ctests = mini-deflate simple gc set_pkcs12_cred certder certuniqueid	\
 	 crq_apis init_roundtrip pkcs12_s2k_pem dn2 mini-eagain		\
 	 nul-in-x509-names x509_altname pkcs12_encode mini-x509		\
 	 mini-x509-rehandshake rng-fork mini-eagain-dtls cipher-test	\
-	 x509cert x509cert-tl infoaccess keygen #gendh
-#gendh is out because it is too slow in valgrind
+	 x509cert x509cert-tl infoaccess
 
 if ENABLE_OPENSSL
 ctests +=  openssl
