--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -31,11 +31,12 @@ endif
 
 info_TEXINFOS = gnutls.texi gnutls-guile.texi
 gnutls_TEXINFOS = gnutls.texi fdl-1.3.texi lgpl-2.1.texi gpl-3.0.texi	\
-	cha-auth.texi cha-bib.texi cha-cert-auth.texi			\
+	cha-bib.texi cha-cert-auth.texi		\
 	cha-ciphersuites.texi cha-copying.texi cha-functions.texi	\
 	cha-gtls-app.texi cha-internals.texi cha-intro-tls.texi		\
 	cha-library.texi cha-preface.texi cha-programs.texi		\
-	sec-tls-app.texi cha-errors.texi cha-support.texi
+	sec-tls-app.texi cha-errors.texi cha-support.texi		\
+	cha-shared-key.texi
 
 # Examples.
 gnutls_TEXINFOS += examples/ex-client1.c				\
