Added SECP192R1 curve.

--- a/lib/includes/gnutls/gnutls.h.in
+++ b/lib/includes/gnutls/gnutls.h.in
@@ -633,6 +633,7 @@ extern "C"
 /**
  * gnutls_ecc_curve_t:
  * @GNUTLS_ECC_CURVE_INVALID: Cannot be known
+ * @GNUTLS_ECC_CURVE_SECP192R1: the SECP192R1 curve
  * @GNUTLS_ECC_CURVE_SECP224R1: the SECP224R1 curve
  * @GNUTLS_ECC_CURVE_SECP256R1: the SECP256R1 curve
  * @GNUTLS_ECC_CURVE_SECP384R1: the SECP384R1 curve
@@ -647,6 +648,7 @@ typedef enum
   GNUTLS_ECC_CURVE_SECP256R1,
   GNUTLS_ECC_CURVE_SECP384R1,
   GNUTLS_ECC_CURVE_SECP521R1,
+  GNUTLS_ECC_CURVE_SECP192R1,
 } gnutls_ecc_curve_t;
 
 /**
