Added missing function names.

--- a/doc/manpages/Makefile.am
+++ b/doc/manpages/Makefile.am
@@ -215,7 +215,7 @@ APIMANS += gnutls_session_ticket_enable_server.3
 APIMANS += gnutls_key_generate.3
 APIMANS += gnutls_priority_init.3
 APIMANS += gnutls_priority_deinit.3
-APIMANS += gnutls_priority_get_cipher_suite.3
+APIMANS += gnutls_priority_get_cipher_suite_index.3
 APIMANS += gnutls_priority_set.3
 APIMANS += gnutls_priority_set_direct.3
 APIMANS += gnutls_set_default_priority.3
@@ -298,6 +298,7 @@ APIMANS += gnutls_session_set_ptr.3
 APIMANS += gnutls_session_get_ptr.3
 APIMANS += gnutls_openpgp_send_cert.3
 APIMANS += gnutls_fingerprint.3
+APIMANS += gnutls_random_art.3
 APIMANS += gnutls_srp_free_client_credentials.3
 APIMANS += gnutls_srp_allocate_client_credentials.3
 APIMANS += gnutls_srp_set_client_credentials.3
