--- a/doc/manpages/Makefile.am
+++ b/doc/manpages/Makefile.am
@@ -50,6 +50,7 @@ APIMANS += gnutls_pubkey_import_dsa_raw.3
 APIMANS += gnutls_pubkey_import_rsa_raw.3
 APIMANS += gnutls_pubkey_import_ecc_x962.3
 APIMANS += gnutls_pubkey_import_ecc_raw.3
+APIMANS += gnutls_pubkey_encrypt_data.3
 APIMANS += gnutls_x509_crt_set_pubkey.3
 APIMANS += gnutls_x509_crq_set_pubkey.3
 APIMANS += gnutls_pubkey_verify_hash.3
@@ -228,6 +229,7 @@ APIMANS += gnutls_session_get_data2.3
 APIMANS += gnutls_session_get_id.3
 APIMANS += gnutls_session_channel_binding.3
 APIMANS += gnutls_session_is_resumed.3
+APIMANS += gnutls_session_resumption_requested.3
 APIMANS += gnutls_db_set_cache_expiration.3
 APIMANS += gnutls_db_remove_session.3
 APIMANS += gnutls_db_set_retrieve_function.3
@@ -264,6 +266,8 @@ APIMANS += gnutls_certificate_set_x509_crl_mem.3
 APIMANS += gnutls_certificate_set_x509_key_file.3
 APIMANS += gnutls_certificate_set_x509_key_mem.3
 APIMANS += gnutls_certificate_send_x509_rdn_sequence.3
+APIMANS += gnutls_certificate_set_x509_simple_pkcs12_file.3
+APIMANS += gnutls_certificate_set_x509_simple_pkcs12_mem.3
 APIMANS += gnutls_certificate_set_x509_key.3
 APIMANS += gnutls_certificate_set_x509_trust.3
 APIMANS += gnutls_certificate_set_x509_crl.3
@@ -526,6 +530,7 @@ APIMANS += gnutls_x509_crt_get_key_usage.3
 APIMANS += gnutls_x509_crt_set_key_usage.3
 APIMANS += gnutls_x509_crt_get_proxy.3
 APIMANS += gnutls_x509_dn_oid_known.3
+APIMANS += gnutls_x509_dn_oid_name.3
 APIMANS += gnutls_x509_crt_get_extension_oid.3
 APIMANS += gnutls_x509_crt_get_extension_by_oid.3
 APIMANS += gnutls_x509_crt_get_extension_info.3
